// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpeedGrader renders 1`] = `
<RCTScrollView
  contentOffset={
    Object {
      "x": 0,
      "y": 0,
    }
  }
  horizontal={true}
  onContentSizeChange={[Function]}
  onLayout={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  pagingEnabled={true}
  scrollEventThrottle={50}
  showsHorizontalScrollIndicator={false}
  stickyHeaderIndices={Array []}
  style={
    Object {
      "marginLeft": -10,
      "marginRight": -10,
    }
  }
>
  <View />
</RCTScrollView>
`;

exports[`SpeedGrader renders submissions if there are some 1`] = `
<RCTScrollView
  contentOffset={
    Object {
      "x": 0,
      "y": 0,
    }
  }
  horizontal={true}
  onContentSizeChange={[Function]}
  onLayout={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  pagingEnabled={true}
  scrollEventThrottle={50}
  showsHorizontalScrollIndicator={false}
  stickyHeaderIndices={Array []}
  style={
    Object {
      "marginLeft": -10,
      "marginRight": -10,
    }
  }
>
  <View>
    <View
      onLayout={[Function]}
    >
      <View
        style={
          Array [
            Object {
              "overflow": "hidden",
              "paddingLeft": 10,
              "paddingRight": 10,
            },
            Object {
              "height": 1334,
              "width": 750,
            },
          ]
        }
      >
        <View
          onLayout={[Function]}
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <Header
            closeModal={[Function]}
            submissionID={undefined}
            submissionProps={
              Object {
                "avatarURL": "http://www.fillmurray.com/100/100",
                "grade": "B-",
                "name": "Donald Trump",
                "status": "submitted",
                "userID": "55",
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`SpeedGrader shows the loading spinner when pending and not refreshing 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <ActivityIndicator
    animating={true}
    color="#999999"
    hidesWhenStopped={true}
    size="small"
  />
</View>
`;

exports[`SpeedGrader shows the loading spinner when there are no submissions 1`] = `
<RCTScrollView
  contentOffset={
    Object {
      "x": 0,
      "y": 0,
    }
  }
  horizontal={true}
  onContentSizeChange={[Function]}
  onLayout={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  pagingEnabled={true}
  scrollEventThrottle={50}
  showsHorizontalScrollIndicator={false}
  stickyHeaderIndices={Array []}
  style={
    Object {
      "marginLeft": -10,
      "marginRight": -10,
    }
  }
>
  <View />
</RCTScrollView>
`;
